--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: SimplePassword
-version: '1.0-SNAPSHOT'
+version: '1.0'
 main: io.github.hk51503.SimplePassword
 api-version: '1.21'
 commands:
